<resources>
    <string name="app_name">QuizzBattle</string>
    <string name="quizz_battle_title">QUIZZ BATTLE</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register_link">¿No tienes cuenta?\nÚnete ya a Quizz Battle</string>
    <string name="username">username</string>
    <string name="avatar" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>