<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/tvQuizzBattle"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="24dp"
        android:text="@string/quizz_battle_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvGenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoLink="none"
        android:text="@string/register_link"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>